2013-06-27  Junichi Satoh <junichi@rworks.jp>

	* FreeBSD/pandora_server.conf: Synchronized with the generic
	configuration file, conf/pandora_server.conf.new.

2013-06-26  Ramon Novoa  <rnovoa@artica.es>

	* pandora_server.redhat.spec,
	  pandora_server.spec: Merged from 4.0 branch. Fixed directory
	  permissions.

2013-06-26  Sancho Lerena <slerena@artica.es>

	* util/plugin/pandora_loadgen.pl,
        util/plugin/ssh_pandoraplugin.sh: Fixed small problems with
	plugins provided as sample.

2013-06-25  Sancho Lerena <slerena@artica.es>

	* conf/pandora_server.conf.new: better values for server

	* util/agent_names.txt: Added default file for being used
	with pandora_xmlstress.conf

2013-06-24  Ramon Novoa  <rnovoa@artica.es>

	* lib/PandoraFMS/ReconServer.pm: Fixed a call to get_agent_from_addr
	  that prevented parents from being properly detected.

2013-06-19 Hirofumi Kosaka <kosaka@rworks.jp>

	* lib/PandoraFMS/Config.pm,
	lib/PandoraFMS/Core.pm,
	conf/pandora_server.conf.new,
	FreeBSD/pandora_server.conf: added eMail option that make
	alerts shared by all destinations (delivering in separate
	mail is default as in the prior versions).

	Merged from trunk.

2013-06-14  Ramon Novoa  <rnovoa@artica.es>

	* util/pandora_db.pl,
	  lib/PandoraFMS/DB.pm: Backported the lock feature from 5.0.

2013-06-13  Ramon Novoa  <rnovoa@artica.es>

	* util/pandora_db.pl: Disabled locks (5.0 feature).

2013-06-13  Sancho Lerena <slerena@artica.es>

	* pandora_server.redhat.spec: Fixed bad paths on perm syntax.

2013-06-12  Ramon Novoa  <rnovoa@artica.es>

	* util/pandora_db.pl: Merged from trunk.

2013-06-12 Miguel de Dios <miguel.dedios@artica.es>

	* pandora_server.spec: cleaned source code style.
	
	* pandora_server.redhat.spec: added the directories of collections
	and remote configuration into the list of chmod perms.
	
	Fixes: #2290

2013-06-07  Ramon Novoa  <rnovoa@artica.es>

	* pandora_server_installer: Merged from 4.0 branch. Remove PERL libs
	  when uninstalling.
