@@ -1,3 +1,8 @@
+2013-07-10  Ramon Novoa  <rnovoa@artica.es>
+
+	* util/pandora_db.pl: Merged from trunk. Ignore reports if the
+	  metaconsole is enabled, since agents are never local.
+
 2013-06-27  Junichi Satoh <junichi@rworks.jp>
 
 	* FreeBSD/pandora_server.conf: Synchronized with the generic
